<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rlSetting_Popup"
    android:visibility="gone"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bg_setting">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/setting_popup"
        android:paddingTop="40dp"
        android:paddingBottom="10dp">
        <RelativeLayout
            android:layout_width="@dimen/setting_width"
            android:padding="20dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">
            <com.flashlight.webis.customview.TextViewBold
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_default"
                android:textSize="@dimen/btn_title"
                android:textColor="@color/text_active"/>
            <com.kyleduo.switchbutton.SwitchButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/swDefault"
                app:kswThumbColor="@android:color/white"
                app:kswTextOn="ON"
                app:kswTextOff="OFF"
                app:kswBackColor="@drawable/bg_switchbutton"
                app:kswFadeBack="true"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="@dimen/setting_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="20dp"
            android:orientation="horizontal">
            <com.flashlight.webis.customview.TextViewBold
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_screen_keep"
                android:textSize="@dimen/btn_title"
                android:textColor="@color/text_active"/>
            <com.kyleduo.switchbutton.SwitchButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/swScreenKeep"
                app:kswThumbColor="@android:color/white"
                app:kswTextOn="ON"
                app:kswTextOff="OFF"
                app:kswBackColor="@drawable/bg_switchbutton"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="@dimen/setting_width"
            android:padding="20dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">
            <com.flashlight.webis.customview.TextViewBold
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_push_alarm"
                android:textSize="@dimen/btn_title"
                android:textColor="@color/text_active"/>
            <com.kyleduo.switchbutton.SwitchButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/swPushAlarm"
                app:kswThumbColor="@android:color/white"
                app:kswTextOn="ON"
                app:kswTextOff="OFF"
                app:kswBackColor="@drawable/bg_switchbutton"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/text_active"/>
        <LinearLayout
            android:layout_width="@dimen/setting_width"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:weightSum="2">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal">
                <Button
                    android:id="@+id/btn_setting_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_save"
                    android:textSize="@dimen/btn_title"
                    android:textColor="@color/text_active"
                    android:onClick="activeSaveSetting"
                    android:background="@drawable/bg_btn_active"
                    android:layout_gravity="center_horizontal"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal">
                <Button
                    android:onClick="activeCancelSetting"
                    android:id="@+id/btn_setting_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_cancel"
                    android:textSize="@dimen/btn_title"
                    android:textColor="@color/text_active"
                    android:background="@drawable/bg_btn_active"
                    android:layout_gravity="center_horizontal"/>
            </RelativeLayout>




        </LinearLayout>

    </LinearLayout>

</RelativeLayout>